🛠️ Import & export in settings + translations

--- a/src/assets/locales/it.json
+++ b/src/assets/locales/it.json
@@ -17,7 +17,7 @@
       "password": "Password",
       "General": "Generale",
       "Shortcuts": "Scorciatoie",
-      "About": "Informazioni",
+      "About": "Info",
       "Inputpassword": "Inserisci la password",
       "body": "Questi dati sono crittografati, inserisci la password per accedere",
       "Import": "Importa",
