🚚 Moving storing logic

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,56 +1,53 @@
 {
-  "settings": {
-    "title": "Settings",
-    "apptheme": "App Theme",
-    "light": "Light",
-    "dark": "Dark",
-    "system": "System",
-    "selectlanguage": "Select language",
-    "selectfont": "Select font",
-    "syncpath": "Sync path",
-    "selectpath": "Select path",
-    "iedata": "Import / Export data",
-    "encryptwpasswd": "Encrypt with password",
-    "exportdata": "Export data",
-    "importdata": "Import data",
-    "pathplaceholder": "Path",
-    "password": "Password",
-    "General": "General",
-    "Shortcuts": "Shortcuts",
-    "About": "About",
-    "Inputpassword": "Input password",
-    "body": "This data is encrypted, you need to input the password to get access",
-    "Import": "Import",
-    "Cancel": "Cancel",
-    "Password": "Password",
-    "Invalidpassword": "Invalid password",
-    "relaunch": "App needs to relaunch for this change to take effect",
-    "relaunchbutton": "Relaunch",
-    "exportmessage": "Notes is exported in",
-    "importsuccess": "Data imported successfully",
-    "invaliddata": "Invalid data",
-    "syncreminder": "Hide sync reminder"
-  },
-  "welcome": {
-    "next": "Next",
-    "back": "Back",
-    "welcomeTitle": "🎉 Welcome to Beaver Pocket",
-    "welcomeParagraph": "All the amazing features introduced with Beaver Notes are packed into the perfect note-taking app for you on the go.",
-    "welcomeWarning": "Beaver Pocket is currently in its alpha stage, which may lead to issues. Therefore it's advised to back up your data regularly. Please be aware that data loss is a possibility.",
-    "languageText": "Choose the language you prefer. can always revisit and update this choice in the settings later.",
-    "getStarted": "Get started",
-    "themeTitle": "🪄 Set the Mood",
-    "themeText": "Choose the appearance that best suits your style. Rest assured, you can always revisit your preferences and make adjustments in the settings later on.",
-    "typographyTitle": "✍️ Craft Your Typography",
-    "typographyText": " Personalize your note-taking experience with fonts that reflect your style. You can always revisit and update this choice in the settings later.",
-    "importTitle": "🚚 Import your notes",
-    "importText": "Effortlessly bring in your notes taken on Beaver Notes. Don't use the desktop app or not ready to import now? No worries — you can import them in settings anytime.",
-    "start": "Start Note-Taking",
-    "startTitle": "🎊 Happy Note-Taking",
-    "skip": "Skip",
-    "light": "Light",
-    "dark": "Dark",
-    "system": "System",
-    "import": "Import"
+    "settings": {
+      "title": "Settings",
+      "apptheme": "App Theme",
+      "light": "Light",
+      "dark": "Dark",
+      "system": "System",
+      "selectlanguage": "Select language",
+      "selectfont": "Select font",
+      "syncpath": "Sync path",
+      "selectpath": "Select path",
+      "iedata": "Import / Export data",
+      "encryptwpasswd": "Encrypt with password",
+      "exportdata": "Export data",
+      "importdata": "Import data",
+      "pathplaceholder": "Path",
+      "password": "Password",
+      "General": "General",
+      "Shortcuts": "Shortcuts",
+      "About": "About",
+      "Inputpassword": "Input password",
+      "body": "This data is encrypted, you need to input the password to get access",
+      "Import": "Import",
+      "Cancel": "Cancel",
+      "Password": "Password",
+      "Invalidpassword": "Invalid password",
+      "relaunch": "App needs to relaunch for this change to take effect",
+      "relaunchbutton": "Relaunch",
+      "exportmessage": "Notes is exported in",
+      "importsuccess": "Data imported successfully",
+      "invaliddata": "Invalid data",
+      "syncreminder": "Hide sync reminder"
+    },
+    "welcome": {
+      "next": "Next",
+      "back": "Back",
+      "themeTitle": "🪄 Set the Mood",
+      "themeText": "Choose the appearance that best suits your style. Rest assured, you can always revisit your preferences and make adjustments in the settings later on.",
+      "light": "Light",
+      "dark": "Dark",
+      "system": "System"
+    },
+    "home": {
+      "bookmarked": "Bookmarked",
+      "all": "All",
+      "messagePt1": "It's a little empty in here. Click",
+      "messagePt2": "to add a new note or click",
+      "messagePt3": "to import your data.",
+      "unlocktoedit": "Unlock to edit",
+      "noContent": "No content...",
+      "title": "New Note"
+    }
   }
-}
