🧪 Working on translations + issue #3

--- a/src/assets/locales/it.json
+++ b/src/assets/locales/it.json
@@ -1,64 +1,97 @@
 {
-    "settings": {
-      "title": "Impostazioni",
-      "apptheme": "Tema dell'app",
-      "light": "Chiaro",
-      "dark": "Scuro",
-      "system": "Sistema",
-      "selectlanguage": "Seleziona lingua",
-      "selectfont": "Seleziona carattere",
-      "syncpath": "Percorso di sincronizzazione",
-      "selectpath": "Seleziona percorso",
-      "iedata": "Importa/Esporta dati",
-      "encryptwpasswd": "Critta con password",
-      "exportdata": "Esporta dati",
-      "importdata": "Importa dati",
-      "pathplaceholder": "Percorso",
-      "password": "Password",
-      "General": "Generale",
-      "Shortcuts": "Scorciatoie",
-      "About": "Info",
-      "Inputpassword": "Inserisci la password",
-      "body": "Questi dati sono crittografati, inserisci la password per accedere",
-      "Import": "Importa",
-      "Cancel": "Annulla",
-      "Password": "Password",
-      "Invalidpassword": "Password non valida",
-      "relaunch": "L'app deve essere riavviata affinché questa modifica abbia effetto",
-      "relaunchbutton": "Riavvia l'app",
-      "exportmessage": "Le note sono state esportate nella cartella",
-      "invaliddata": "Dati non validi",
-      "syncreminder": "Nascondi promemoria di sincronizzazione"
-    },
-    "welcome": {
-      "next": "Avanti",
-      "back": "Indietro",
-      "welcomeTitle": "🎉 Benvenuto in Beaver Pocket",
-      "welcomeParagraph": "Tutte le incredibili funzionalità introdotte con Beaver Notes racchiuse nella perfetta app per prendere appunti.",
-      "welcomeWarning": "Beaver Pocket è attualmente nella sua fase alpha, il che potrebbe causare problemi. Si consiglia pertanto di eseguire regolarmente il backup dei dati. Si prega di essere consapevoli che la perdita di dati è una possibilità.",
-      "languageText": "Scegli la lingua che preferisci. Puoi sempre tornare indietro e cambiare questa scelta nelle impostazioni in seguito.",
-      "getStarted": "Inizia",
-      "themeTitle": "🪄 Imposta l'Atmosfera",
-      "themeText": "Scegli l'aspetto che si adatta meglio al tuo stile. Stai tranquillo, puoi sempre ripensarci e apportare modifiche nelle impostazioni in seguito.",
-      "typographyTitle": "✍️ Personalizza la tua Tipografia",
-      "typographyText": "Personalizza la tua esperienza con caratteri che riflettono il tuo stile. Puoi sempre cambiare idea e modificare questa scelta nelle impostazioni in seguito.",
-      "importTitle": "🚚 Importa i tuoi appunti",
-      "importText": "Porta senza sforzo i tuoi appunti presi su Beaver Notes. Se non usi l'app desktop o non sei pronto a importare i tuoi appunti ora? Nessun problema, puoi importarli in qualsiasi momento nelle impostazioni.",
-      "start": "Inizia ora",
-      "startTitle": "🎊 Pronto per Cominciare",
-      "skip": "Salta",
-      "light": "Chiaro",
-      "dark": "Scuro",
-      "system": "Sistema"      
-    },
-    "home": {
-      "bookmarked": "Contrassegnate",
-      "all": "Tutte",
-      "messagePt1": "Questa sezione è vuota. Clicca",
-      "messagePt2": "per aggiungere una nuova nota o clicca",
-      "messagePt3": "per importare i tuoi dati.",
-      "unlocktoedit": "Sblocca per modificare",
-      "noContent": "Nessun contenuto...",
-      "title": "Nuova Nota"
-    }
+  "settings": {
+    "title": "Impostazioni",
+    "apptheme": "Tema dell'app",
+    "light": "Chiaro",
+    "dark": "Scuro",
+    "system": "Sistema",
+    "selectlanguage": "Seleziona lingua",
+    "selectfont": "Seleziona carattere",
+    "syncpath": "Percorso di sincronizzazione",
+    "selectpath": "Seleziona percorso",
+    "iedata": "Importa/Esporta dati",
+    "encryptwpasswd": "Critta con password",
+    "exportdata": "Esporta dati",
+    "importdata": "Importa dati",
+    "pathplaceholder": "Percorso",
+    "password": "Password",
+    "General": "Generale",
+    "Shortcuts": "Scorciatoie",
+    "About": "Info",
+    "Inputpassword": "Inserisci la password",
+    "body": "Questi dati sono crittografati, inserisci la password per accedere",
+    "Import": "Importa",
+    "Cancel": "Annulla",
+    "Password": "Password",
+    "Invalidpassword": "Password non valida",
+    "relaunch": "L'app deve essere riavviata affinché questa modifica abbia effetto",
+    "relaunchbutton": "Riavvia l'app",
+    "exportmessage": "Le note sono state esportate nella cartella",
+    "invaliddata": "Dati non validi",
+    "syncreminder": "Nascondi promemoria di sincronizzazione"
+  },
+  "welcome": {
+    "next": "Avanti",
+    "back": "Indietro",
+    "welcomeTitle": "🎉 Benvenuto in Beaver Pocket",
+    "welcomeParagraph": "Tutte le incredibili funzionalità introdotte con Beaver Notes racchiuse nella perfetta app per prendere appunti.",
+    "welcomeWarning": "Beaver Pocket è attualmente nella sua fase alpha, il che potrebbe causare problemi. Si consiglia pertanto di eseguire regolarmente il backup dei dati. Si prega di essere consapevoli che la perdita di dati è una possibilità.",
+    "languageText": "Scegli la lingua che preferisci. Puoi sempre tornare indietro e cambiare questa scelta nelle impostazioni in seguito.",
+    "getStarted": "Inizia",
+    "themeTitle": "🪄 Imposta l'Atmosfera",
+    "themeText": "Scegli l'aspetto che si adatta meglio al tuo stile. Stai tranquillo, puoi sempre ripensarci e apportare modifiche nelle impostazioni in seguito.",
+    "typographyTitle": "✍️ Personalizza la tua Tipografia",
+    "typographyText": "Personalizza la tua esperienza con caratteri che riflettono il tuo stile. Puoi sempre cambiare idea e modificare questa scelta nelle impostazioni in seguito.",
+    "importTitle": "🚚 Importa i tuoi appunti",
+    "importText": "Porta senza sforzo i tuoi appunti presi su Beaver Notes. Se non usi l'app desktop o non sei pronto a importare i tuoi appunti ora? Nessun problema, puoi importarli in qualsiasi momento nelle impostazioni.",
+    "start": "Inizia ora",
+    "startTitle": "🎊 Pronto per Cominciare",
+    "skip": "Salta",
+    "light": "Chiaro",
+    "dark": "Scuro",
+    "system": "Sistema"
+  },
+  "home": {
+    "bookmarked": "Contrassegnate",
+    "all": "Tutte",
+    "messagePt1": "Qui non c'è niente. Clicca",
+    "messagePt2": "per aggiungere una nuova nota o clicca",
+    "messagePt3": "per importare i tuoi dati.",
+    "unlocktoedit": "Sblocca per modificare",
+    "noContent": "Nessun contenuto...",
+    "title": "Nuova Nota",
+    "confirmDelete": "Sei sicuro di voler eliminare questa nota?",
+    "exportSuccess": "Esportazione completata con successo! Controlla i tuoi download.",
+    "exportError": "Si è verificato l'errore seguente durante l'esportazione di dati e immagini: ",
+    "shareError": "Si è verificato l'errore seguente durante il tentativo di condivisione delle tue note: ",
+    "importSuccess": "Note importate con successo!",
+    "importInvalid": "Formato dati non valido",
+    "importError": "Si è verificato un errore durante l'importazione dei dati. Riprova.",
+    "biometricsReason": "Per l'autenticazione della nota",
+    "biometricsTitle": "Autenticazione",
+    "subtitle": "Utilizza la biometria per bloccare o sbloccare la nota.",
+    "subtitle2": "Utilizza la biometria per sbloccare la nota.",
+    "biometricFace": "Utilizza il tuo Face ID per l'autenticazione",
+    "biometricTouch": "Utilizza il tuo Touch ID per l'autenticazione",
+    "biometricSuccess": "Autenticato con successo",
+    "biometricError": "Qualcosa è andato storto. Riprova.",
+    "biometricPassword": "Imposta una password per bloccare/sbloccare le tue note: ",
+    "biometricWrongPassword": "Password errata. Riprova.",
+    "biometricUnlock": "Inserisci la password per sbloccare la nota:"
+  },
+  "archive": {
+    "archived": "Archiviato",
+    "messagePt1": "Nessuna nota è stata archiviata. Clicca",
+    "messagePt2": "per archiviare una nota.",
+    "unlocktoedit": "Sblocca per modificare",
+    "noContent": "Nessun contenuto...",
+    "title": "Nuova Nota"
+  },
+  "search":{
+    "searchNotes": "Cerca nella note",
+    "selectlabel": "Selezione Etichetta",
+    "lastUpdated": "Ultima modifica",
+    "creationDate": "Data di Creazione",
+    "alphabetical": "Alfabetico"
   }
+}
