--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,53 +1,98 @@
 {
-    "settings": {
-      "title": "Settings",
-      "apptheme": "App Theme",
-      "light": "Light",
-      "dark": "Dark",
-      "system": "System",
-      "selectlanguage": "Select language",
-      "selectfont": "Select font",
-      "syncpath": "Sync path",
-      "selectpath": "Select path",
-      "iedata": "Import / Export data",
-      "encryptwpasswd": "Encrypt with password",
-      "exportdata": "Export data",
-      "importdata": "Import data",
-      "pathplaceholder": "Path",
-      "password": "Password",
-      "General": "General",
-      "Shortcuts": "Shortcuts",
-      "About": "About",
-      "Inputpassword": "Input password",
-      "body": "This data is encrypted, you need to input the password to get access",
-      "Import": "Import",
-      "Cancel": "Cancel",
-      "Password": "Password",
-      "Invalidpassword": "Invalid password",
-      "relaunch": "App needs to relaunch for this change to take effect",
-      "relaunchbutton": "Relaunch",
-      "exportmessage": "Notes is exported in",
-      "importsuccess": "Data imported successfully",
-      "invaliddata": "Invalid data",
-      "syncreminder": "Hide sync reminder"
-    },
-    "welcome": {
-      "next": "Next",
-      "back": "Back",
-      "themeTitle": "🪄 Set the Mood",
-      "themeText": "Choose the appearance that best suits your style. Rest assured, you can always revisit your preferences and make adjustments in the settings later on.",
-      "light": "Light",
-      "dark": "Dark",
-      "system": "System"
-    },
-    "home": {
-      "bookmarked": "Bookmarked",
-      "all": "All",
-      "messagePt1": "It's a little empty in here. Click",
-      "messagePt2": "to add a new note or click",
-      "messagePt3": "to import your data.",
-      "unlocktoedit": "Unlock to edit",
-      "noContent": "No content...",
-      "title": "New Note"
-    }
+  "settings": {
+    "title": "Settings",
+    "apptheme": "App Theme",
+    "light": "Light",
+    "dark": "Dark",
+    "system": "System",
+    "selectlanguage": "Select language",
+    "selectfont": "Select font",
+    "syncpath": "Sync path",
+    "selectpath": "Select path",
+    "iedata": "Import / Export data",
+    "encryptwpasswd": "Encrypt with password",
+    "exportdata": "Export data",
+    "importdata": "Import data",
+    "pathplaceholder": "Path",
+    "password": "Password",
+    "General": "General",
+    "Shortcuts": "Shortcuts",
+    "About": "About",
+    "Inputpassword": "Input password",
+    "body": "This data is encrypted, you need to input the password to get access",
+    "Import": "Import",
+    "Cancel": "Cancel",
+    "Password": "Password",
+    "Invalidpassword": "Invalid password",
+    "relaunch": "App needs to relaunch for this change to take effect",
+    "relaunchbutton": "Relaunch",
+    "exportmessage": "Notes is exported in",
+    "importsuccess": "Data imported successfully",
+    "invaliddata": "Invalid data",
+    "syncreminder": "Hide sync reminder"
+  },
+  "welcome": {
+    "next": "Next",
+    "back": "Back",
+    "welcomeTitle": "🎉 Welcome to Beaver Pocket",
+    "welcomeParagraph": "All the incredible features introduced with Beaver Notes packed into the perfect note-taking app.",
+    "welcomeWarning": "Beaver Pocket is currently in its alpha phase, which may cause issues. It is recommended to regularly back up your data. Please be aware that data loss is a possibility.",
+    "languageText": "Choose the language you prefer. You can always go back and change this choice in the settings later.",
+    "getStarted": "Get Started",
+    "themeTitle": "🪄 Set the Atmosphere",
+    "themeText": "Choose the look that best suits your style. Rest assured, you can always reconsider and make changes in the settings later.",
+    "typographyTitle": "✍️ Customize Your Typography",
+    "typographyText": "Personalize your experience with fonts that reflect your style. You can always change your mind and modify this choice in the settings later.",
+    "importTitle": "🚚 Import Your Notes",
+    "importText": "Effortlessly bring in your notes taken on Beaver Notes. If you don't use the desktop app or are not ready to import your notes now? No problem, you can import them anytime in the settings.",
+    "start": "Start Now",
+    "startTitle": "🎊 Ready to Begin",
+    "skip": "Skip",
+    "light": "Light",
+    "dark": "Dark",
+    "system": "System"
+  },
+  "home": {
+    "bookmarked": "Bookmarked",
+    "all": "All",
+    "messagePt1": "It's a little empty in here. Click",
+    "messagePt2": "to add a new note or click",
+    "messagePt3": "to import your data.",
+    "unlocktoedit": "Unlock to edit",
+    "noContent": "No content...",
+    "title": "New Note",
+    "confirmDelete": "Are you sure you want to delete this note?",
+    "exportSuccess": "Export completed successfully! Check your downloads.",
+    "exportError": "The following error accured while exporting data and images: ",
+    "shareError": "The following error accured while trying to share your notes: ",
+    "importSuccess": "Notes imported successfully!",
+    "importInvalid": "Invalid data format",
+    "importError": "An error accured while importing data. Please try again.",
+    "biometricsReason": "For note authentication",
+    "biometricsTitle": "Authenticate",
+    "subtitle": "Use biometrics to lock or unlock the note.",
+    "subtitle2": "Use biometrics to unlock the note.",
+    "biometricFace": "Use your Face ID for authentication",
+    "biometricTouch": "Use your Touch ID for authentication",
+    "biometricSuccess": "Authentication successful",
+    "biometricError": "Something went wrong. Please try again.",
+    "biometricPassword": "Set up a password to lock/unlock your notes: ",
+    "biometricWrongPassword": "Wrong password. Please try again.",
+    "biometricUnlock": "Enter the password to unlock the note:"
+  },
+  "archive": {
+    "archived": "Archived",
+    "messagePt1": "No notes have been Archived. Click",
+    "messagePt2": "to archive a note.",
+    "unlocktoedit": "Unlock to edit",
+    "noContent": "No content...",
+    "title": "New Note"
+  },
+  "search": {
+    "searchNotes": "Search Notes",
+    "selectlabel": "Select Label",
+    "lastUpdated": "Last Updated",
+    "creationDate": "Creation Date",
+    "alphabetical": "Alphabetical"
   }
+}
