--- a/src/assets/locales/it.json
+++ b/src/assets/locales/it.json
@@ -10,23 +10,24 @@
     "syncpath": "Percorso di sincronizzazione",
     "selectpath": "Seleziona percorso",
     "iedata": "Importa/Esporta dati",
-    "encryptwpasswd": "Critta con password",
+    "encryptwpasswd": "Cripta con password",
     "exportdata": "Esporta dati",
     "importdata": "Importa dati",
     "pathplaceholder": "Percorso",
     "password": "Password",
     "General": "Generale",
     "Shortcuts": "Scorciatoie",
-    "About": "Info",
+    "About": "Informazioni",
     "Inputpassword": "Inserisci la password",
-    "body": "Questi dati sono crittografati, inserisci la password per accedere",
+    "body": "Questi dati sono criptati, devi inserire la password per accedere",
     "Import": "Importa",
     "Cancel": "Annulla",
     "Password": "Password",
     "Invalidpassword": "Password non valida",
-    "relaunch": "L'app deve essere riavviata affinché questa modifica abbia effetto",
-    "relaunchbutton": "Riavvia l'app",
-    "exportmessage": "Le note sono state esportate nella cartella",
+    "relaunch": "L'app deve essere riavviata per apportare questa modifica",
+    "relaunchbutton": "Riavvia",
+    "exportmessage": "Le note sono state esportate in",
+    "importsuccess": "Dati importati con successo",
     "invaliddata": "Dati non validi",
     "syncreminder": "Nascondi promemoria di sincronizzazione"
   },
@@ -35,63 +36,105 @@
     "back": "Indietro",
     "welcomeTitle": "🎉 Benvenuto in Beaver Pocket",
     "welcomeParagraph": "Tutte le incredibili funzionalità introdotte con Beaver Notes racchiuse nella perfetta app per prendere appunti.",
-    "welcomeWarning": "Beaver Pocket è attualmente nella sua fase alpha, il che potrebbe causare problemi. Si consiglia pertanto di eseguire regolarmente il backup dei dati. Si prega di essere consapevoli che la perdita di dati è una possibilità.",
+    "welcomeWarning": "Beaver Pocket è attualmente nella sua fase alpha, il che potrebbe causare problemi. Si consiglia di eseguire regolarmente il backup dei tuoi dati. Si prega di essere consapevoli che la perdita di dati è una possibilità.",
     "languageText": "Scegli la lingua che preferisci. Puoi sempre tornare indietro e cambiare questa scelta nelle impostazioni in seguito.",
     "getStarted": "Inizia",
     "themeTitle": "🪄 Imposta l'Atmosfera",
-    "themeText": "Scegli l'aspetto che si adatta meglio al tuo stile. Stai tranquillo, puoi sempre ripensarci e apportare modifiche nelle impostazioni in seguito.",
-    "typographyTitle": "✍️ Personalizza la tua Tipografia",
+    "themeText": "Scegli l'aspetto che si adatta meglio al tuo stile. Puoi sempre riflettere e apportare modifiche nelle impostazioni in seguito.",
+    "typographyTitle": "✍️ Personalizza la Tua Tipografia",
     "typographyText": "Personalizza la tua esperienza con caratteri che riflettono il tuo stile. Puoi sempre cambiare idea e modificare questa scelta nelle impostazioni in seguito.",
-    "importTitle": "🚚 Importa i tuoi appunti",
+    "importTitle": "🚚 Importa i Tuoi Appunti",
     "importText": "Porta senza sforzo i tuoi appunti presi su Beaver Notes. Se non usi l'app desktop o non sei pronto a importare i tuoi appunti ora? Nessun problema, puoi importarli in qualsiasi momento nelle impostazioni.",
-    "start": "Inizia ora",
-    "startTitle": "🎊 Pronto per Cominciare",
+    "start": "Inizia Ora",
+    "startTitle": "🎊 Pronto a Iniziare",
     "skip": "Salta",
     "light": "Chiaro",
     "dark": "Scuro",
-    "system": "Sistema"
+    "system": "Sistema",
+    "import": "Importa"
   },
   "home": {
-    "bookmarked": "Contrassegnate",
+    "bookmarked": "Preferiti",
     "all": "Tutte",
-    "messagePt1": "Qui non c'è niente. Clicca",
-    "messagePt2": "per aggiungere una nuova nota o clicca",
+    "messagePt1": "È un po' vuoto qui. Clicca",
+    "messagePt2": "per aggiungere un nuovo appunto o clicca",
     "messagePt3": "per importare i tuoi dati.",
     "unlocktoedit": "Sblocca per modificare",
     "noContent": "Nessun contenuto...",
-    "title": "Nuova Nota",
-    "confirmDelete": "Sei sicuro di voler eliminare questa nota?",
+    "title": "Nuovo Appunto",
+    "confirmDelete": "Sei sicuro di voler eliminare questo appunto?",
     "exportSuccess": "Esportazione completata con successo! Controlla i tuoi download.",
-    "exportError": "Si è verificato l'errore seguente durante l'esportazione di dati e immagini: ",
-    "shareError": "Si è verificato l'errore seguente durante il tentativo di condivisione delle tue note: ",
-    "importSuccess": "Note importate con successo!",
+    "exportError": "Si è verificato il seguente errore durante l'esportazione di dati e immagini: ",
+    "shareError": "Si è verificato il seguente errore nel tentativo di condividere i tuoi appunti: ",
+    "importSuccess": "Appunti importati con successo!",
     "importInvalid": "Formato dati non valido",
     "importError": "Si è verificato un errore durante l'importazione dei dati. Riprova.",
-    "biometricsReason": "Per l'autenticazione della nota",
-    "biometricsTitle": "Autenticazione",
-    "subtitle": "Utilizza la biometria per bloccare o sbloccare la nota.",
-    "subtitle2": "Utilizza la biometria per sbloccare la nota.",
-    "biometricFace": "Utilizza il tuo Face ID per l'autenticazione",
-    "biometricTouch": "Utilizza il tuo Touch ID per l'autenticazione",
-    "biometricSuccess": "Autenticato con successo",
+    "biometricsReason": "Per l'autenticazione dell'appunto",
+    "biometricsTitle": "Autentica",
+    "subtitle": "Usa la biometria per bloccare o sbloccare l'appunto.",
+    "subtitle2": "Usa la biometria per sbloccare l'appunto.",
+    "biometricFace": "Usa il tuo Face ID per l'autenticazione",
+    "biometricTouch": "Usa il tuo Touch ID per l'autenticazione",
+    "biometricSuccess": "Autenticazione riuscita",
     "biometricError": "Qualcosa è andato storto. Riprova.",
-    "biometricPassword": "Imposta una password per bloccare/sbloccare le tue note: ",
+    "biometricPassword": "Imposta una password per bloccare/sbloccare i tuoi appunti: ",
     "biometricWrongPassword": "Password errata. Riprova.",
-    "biometricUnlock": "Inserisci la password per sbloccare la nota:"
+    "biometricUnlock": "Inserisci la password per sbloccare l'appunto:",
+    "bookmarkError": "Si è verificato il seguente errore durante l'aggiunta ai preferiti di un appunto:",
+    "archiveError": "Si è verificato il seguente errore durante l'archiviazione di un appunto:",
+    "shareTitle": "Condividi Esportazione Beaver Notes",
+    "addLabel": "Aggiungi Etichetta"
   },
   "archive": {
-    "archived": "Archiviato",
-    "messagePt1": "Nessuna nota è stata archiviata. Clicca",
-    "messagePt2": "per archiviare una nota.",
+    "archived": "Archiviate",
+    "messagePt1": "Nessun appunto è stato archiviato. Clicca",
+    "messagePt2": "per archiviare un appunto.",
     "unlocktoedit": "Sblocca per modificare",
     "noContent": "Nessun contenuto...",
-    "title": "Nuova Nota"
+    "title": "Nuovo Appunto"
   },
-  "search":{
-    "searchNotes": "Cerca nella note",
-    "selectlabel": "Selezione Etichetta",
-    "lastUpdated": "Ultima modifica",
+  "search": {
+    "searchNotes": "Cerca Appunti",
+    "selectlabel": "Seleziona Etichetta",
+    "lastUpdated": "Ultimo Aggiornamento",
     "creationDate": "Data di Creazione",
     "alphabetical": "Alfabetico"
+  },
+  "shortcuts": {
+    "General": "Scorciatoie generali",
+    "Navigates": "Scorciatoie di navigazione",
+    "Editor": "Scorciatoie dell'editor",
+    "Createnewnote": "Crea nuovo appunto",
+    "Togglecommandprompt": "Attiva/Disattiva prompt dei comandi",
+    "Toggledarktheme": "Attiva/Disattiva tema scuro",
+    "Toggleexport": "Attiva/Disattiva esportazione",
+    "Toggleimport": "Attiva/Disattiva importazione",
+    "Toeditednote": "All'appunto modificato",
+    "Tonotes": "Agli appunti",
+    "Toarchivednotes": "Agli appunti archiviati",
+    "Tosettings": "Alle impostazioni",
+    "Bold": "Grassetto",
+    "Italic": "Corsivo",
+    "Underline": "Sottolineato",
+    "Link": "Collegamento",
+    "Strikethrough": "Barrato",
+    "Highlight": "Evidenzia",
+    "Inlinecode": "Codice in linea",
+    "Headings": "Intestazioni (1-6)",
+    "Orderedlist": "Lista ordinata",
+    "Bulletlist": "Lista puntata",
+    "Blockquote": "Citazione",
+    "Blockcode": "Codice di blocco",
+    "Previousnote": "Appunti precedenti"
+  },
+  "about": {
+    "title": "Informazioni",
+    "app": "Beaver Pocket",
+    "description": "Beaver Pocket è stato sviluppato con amore ❤️ per prendere i tuoi appunti ovunque tu sia.",
+    "version": "Versione",
+    "website": "Sito web",
+    "github" : "GitHub",
+    "donate": "Dona",
+    "copyright": "Copyright © 2023 - 2024. Tutti i diritti riservati."
   }
 }
