--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -1,149 +1,151 @@
 {
-  "settings": {
-    "title": "Einstellungen",
-    "apptheme": "App Thema",
-    "light": "Hell",
-    "dark": "Dunkel",
-    "system": "System",
-    "selectlanguage": "Sprache auswählen",
-    "selectfont": "Zeichensatz auswählen",
-    "syncpath": "Sync Pfad",
-    "selectpath": "Pfad auswählen",
-    "iedata": "Daten importieren/exportieren",
-    "encryptwpasswd": "Verschlüsseln mit Passwort",
-    "exportdata": "Daten exportieren",
-    "importdata": "Daten importieren",
-    "pathplaceholder": "Pfad",
-    "password": "Passwort",
-    "General": "Allgemein",
-    "Shortcuts": "Tastaturkürzel",
-    "About": "Über",
-    "Inputpassword": "Passwort eingeben",
-    "body": "Diese Daten sind verschlüsselt, Sie müssen das Passwort eingeben, um Zugang zu erhalten.",
-    "Import": "Import",
-    "Cancel": "Abbrechen",
-    "Password": "Passwort",
-    "Invalidpassword": "Ungültiges Passwort",
-    "relaunch": "Die App muss neu gestartet werden, damit diese Änderung wirksam wird.",
-    "relaunchbutton": "Neustart",
-    "exportmessage": "Die Notizen werden exportiert in",
-    "importsuccess": "Daten erfolgreich importiert",
-    "invaliddata": "Ungültige Daten",
-    "syncreminder": "Verstecke Synchronisationserinnerung"
-  },
-  "welcome": {
-    "next": "Weiter",
-    "back": "Zurück",
-    "welcomeTitle": "🎉 Willkommen bei Beaver Pocket",
-    "welcomeParagraph": "Alle unglaublichen Funktionen, die mit Beaver Notes eingeführt wurden, verpackt in der perfekten App für Notizen.",
-    "welcomeWarning": "Beaver Pocket befindet sich derzeit in der Alpha-Phase, was zu Problemen führen kann. Es wird empfohlen, regelmäßig eine Sicherungskopie Ihrer Daten zu erstellen. Bitte beachten Sie, dass ein Datenverlust möglich ist.",
-    "languageText": "Wählen Sie die Sprache, die Sie bevorzugen. Sie können diese Wahl später in den Einstellungen jederzeit wieder ändern.",
-    "getStarted": "Los geht's",
-    "themeTitle": "🪄 Wählen Sie das App Thema",
-    "themeText": "Wählen Sie das Aussehen, das am besten zu Ihrem Stil passt. Seien Sie versichert, dass Sie die Einstellungen später jederzeit überdenken und ändern können.",
-    "typographyTitle": "✍️ Anpassen der Schriftart",
-    "typographyText": "Gestalten Sie Ihr Erlebnis mit Schriftarten, die Ihren Stil widerspiegeln. Sie können Ihre Meinung jederzeit ändern und diese Auswahl später in den Einstellungen anpassen.",
-    "importTitle": "🚚 Importieren Sie Ihre Notizen",
-    "importText": "Bringen Sie Ihre mit Beaver Notes erstellten Notizen mühelos hinein. Wenn Sie die Desktop-App nicht verwenden oder nicht bereit sind, Ihre Notizen jetzt zu importieren? Kein Problem, Sie können sie jederzeit in den Einstellungen importieren.",
-    "start": "Beginne jetzt",
-    "startTitle": "🎊 Bereit zum Start",
-    "skip": "Überspringen",
-    "light": "Hell",
-    "dark": "Dunkel",
-    "system": "System",
-    "import": "Import"
-  },
-  "home": {
-    "bookmarked": "Lesezeichen",
-    "all": "Alle",
-    "messagePt1": "Es ist ein wenig leer hier. Klicken Sie",
-    "messagePt2": "um eine neue Notiz hinzufügen oder klicken Sie",
-    "messagePt3": "um Daten zu importieren.",
-    "unlocktoedit": "Entsperren zum editieren",
-    "noContent": "Kein Inhalt...",
-    "title": "Neue Notiz",
-    "confirmDelete": "Sind Sie sicher, dass Sie diese Notiz löschen wollen?",
-    "exportSuccess": "Export erfolgreich abgeschlossen! Überprüfen Sie Ihre Downloads.",
-    "exportError": "Beim Exportieren von Daten und Bildern ist folgender Fehler aufgetreten: ",
-    "shareError": "Beim Versuch, Ihre Notizen freizugeben, trat folgender Fehler auf: ",
-    "importSuccess": "Notizen erfolgreich importiert!",
-    "importInvalid": "Ungültiges Datenformat",
-    "importError": "Beim Importieren von Daten ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
-    "biometricsReason": "Für die Authentifizierung von Notizen",
-    "biometricsTitle": "Authentifizierung",
-    "subtitle": "Verwenden Sie biometrische Merkmale zum Sperren oder Entsperren der Notiz.",
-    "subtitle2": "Verwenden Sie biometrische Merkmale zum Entsperren der Notiz.",
-    "biometricFace": "Benutze Face ID für die Authentifizierung",
-    "biometricTouch": "Benutze Touch ID für die Authentifizierung",
-    "biometricSuccess": "Authentifizierung erfolgreich",
-    "biometricError": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
-    "biometricPassword": "Einrichten eines Passworts zum Sperren/Entsperren Ihrer Notizen: ",
-    "biometricWrongPassword": "Falsches Passwort. Bitte versuchen Sie es erneut.",
-    "biometricUnlock": "Geben Sie das Passwort ein, um die Notiz zu entsperren:",
-    "bookmarkError": "Beim Setzen eines Lesezeichens für die Notiz trat folgender Fehler auf:",
-    "enterpasswd": "Geben Sie das Passwort ein",
-    "archiveError": "Beim Archivieren der Notiz trat folgender Fehler auf:",
-    "shareTitle": "Beaver Notes Export teilen",
-    "wrongpasswd": "Falsches Passwort. Notiz kann nicht entsperrt werden.",
-    "lockerror": "Die Notiz kann nicht entsperrt werden."
-  },
-  "editor": {
-    "addLabel": "Kategorie hinzufügen",
-    "searchHeadings": "Überschriften durchsuchen"
-  },
-  "archive": {
-    "archived": "Archiviert",
-    "messagePt1": "Es wurden noch keine Notizen archiviert. Klicken Sie",
-    "messagePt2": "um eine Notiz zu archivieren.",
-    "unlocktoedit": "Entsperren zum Bearbeiten",
-    "noContent": "Kein Inhalt...",
-    "title": "Neue Notiz"
-  },
-  "search": {
-    "searchNotes": "Notizen suchen",
-    "selectlabel": "Kategorie auswählen",
-    "lastUpdated": "Zuletzt aktualisiert",
-    "creationDate": "Erstellungsdatum",
-    "alphabetical": "Alphabetisch"
-  },
-  "shortcuts": {
-    "General": "Allgemein",
-    "Navigates": "Navigation",
-    "Editor": "Bearbeitung",
-    "Createnewnote": "Neue Notiz erstellen",
-    "Togglecommandprompt": "Aktivieren der Befehlszeile",
-    "Toggledarktheme": "Thema umschalten",
-    "Toggleexport": "Export",
-    "Toggleimport": "Import",
-    "Toeditednote": "Zu bearbeiteter Notiz",
-    "Tonotes": "Zu den Notizen",
-    "Toarchivednotes": "Zu den archivierten Notizen",
-    "Tosettings": "Zu den Einstellungen",
-    "Bold": "Fett",
-    "Italic": "Kursiv",
-    "Underline": "Unterstrichen",
-    "Link": "Link",
-    "Strikethrough": "Durchgestrichen",
-    "Highlight": "Hervorheben",
-    "Inlinecode": "Eingebetteter Code",
-    "Headings": "Überschriften (1-6)",
-    "Orderedlist": "Nummerierte Liste",
-    "Bulletlist": "Aufzählungsliste",
-    "Blockquote": "Blocksatz",
-    "Blockcode": "Codeblock",
-    "Previousnote": "Vorherige Notizen"
-  },
-  "about": {
-    "title": "Über",
-    "app": "Beaver Pocket",
-    "description": "Beaver Pocket wurde mit Liebe entwickelt ❤️, um deine Notizen unterwegs zu machen.",
-    "version": "Version",
-    "website": "Website",
-    "github" : "GitHub",
-    "donate": "Spenden",
-    "copyright": "Copyright © 2023 - 2024. All rights reserved."
-  },
-  "tiptap": {
-    "placeholder": "Schreibe etwas..."
-  }
+    "about": {
+        "app": "Beaver Pocket",
+        "copyright": "Copyright © 2023 - 2024. All rights reserved.",
+        "description": "Beaver Pocket wurde mit Liebe entwickelt ❤️, um deine Notizen unterwegs zu machen.",
+        "donate": "Spenden",
+        "github": "GitHub",
+        "title": "Über",
+        "version": "Version",
+        "website": "Website"
+    },
+    "archive": {
+        "archived": "Archiviert",
+        "messagePt1": "Es wurden noch keine Notizen archiviert. Klicken Sie",
+        "messagePt2": "um eine Notiz zu archivieren.",
+        "noContent": "Kein Inhalt...",
+        "title": "Neue Notiz",
+        "unlocktoedit": "Entsperren zum Bearbeiten"
+    },
+    "editor": {
+        "addLabel": "Kategorie hinzufügen",
+        "searchHeadings": "Überschriften durchsuchen"
+    },
+    "home": {
+        "all": "Alle",
+        "archiveError": "Beim Archivieren der Notiz trat folgender Fehler auf:",
+        "biometricError": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
+        "biometricFace": "Benutze Face ID für die Authentifizierung",
+        "biometricPassword": "Einrichten eines Passworts zum Sperren/Entsperren Ihrer Notizen: ",
+        "biometricSuccess": "Authentifizierung erfolgreich",
+        "biometricTouch": "Benutze Touch ID für die Authentifizierung",
+        "biometricUnlock": "Geben Sie das Passwort ein, um die Notiz zu entsperren:",
+        "biometricWrongPassword": "Falsches Passwort. Bitte versuchen Sie es erneut.",
+        "biometricsReason": "Für die Authentifizierung von Notizen",
+        "biometricsTitle": "Authentifizierung",
+        "bookmarkError": "Beim Setzen eines Lesezeichens für die Notiz trat folgender Fehler auf:",
+        "bookmarked": "Lesezeichen",
+        "cancel": "Abbrechen",
+        "confirm": "Bestätigen",
+        "confirmDelete": "Sind Sie sicher, dass Sie diese Notiz löschen wollen?",
+        "enterpasswd": "Geben Sie das Passwort ein",
+        "exportError": "Beim Exportieren von Daten und Bildern ist folgender Fehler aufgetreten: ",
+        "exportSuccess": "Export erfolgreich abgeschlossen! Überprüfen Sie Ihre Downloads.",
+        "importError": "Beim Importieren von Daten ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
+        "importInvalid": "Ungültiges Datenformat",
+        "importSuccess": "Notizen erfolgreich importiert!",
+        "lockerror": "Die Notiz kann nicht entsperrt werden.",
+        "messagePt1": "Es ist ein wenig leer hier. Klicken Sie",
+        "messagePt2": "um eine neue Notiz hinzufügen oder klicken Sie",
+        "messagePt3": "um Daten zu importieren.",
+        "noContent": "Kein Inhalt...",
+        "shareError": "Beim Versuch, Ihre Notizen freizugeben, trat folgender Fehler auf: ",
+        "shareTitle": "Beaver Notes Export teilen",
+        "subtitle": "Verwenden Sie biometrische Merkmale zum Sperren oder Entsperren der Notiz.",
+        "subtitle2": "Verwenden Sie biometrische Merkmale zum Entsperren der Notiz.",
+        "title": "Neue Notiz",
+        "unlocktoedit": "Entsperren zum editieren",
+        "wrongpasswd": "Falsches Passwort. Notiz kann nicht entsperrt werden."
+    },
+    "search": {
+        "alphabetical": "Alphabetisch",
+        "creationDate": "Erstellungsdatum",
+        "lastUpdated": "Zuletzt aktualisiert",
+        "searchNotes": "Notizen suchen",
+        "selectlabel": "Kategorie auswählen"
+    },
+    "settings": {
+        "About": "Über",
+        "Cancel": "Abbrechen",
+        "General": "Allgemein",
+        "Import": "Import",
+        "Inputpassword": "Passwort eingeben",
+        "Invalidpassword": "Ungültiges Passwort",
+        "Password": "Passwort",
+        "Shortcuts": "Tastaturkürzel",
+        "apptheme": "App Thema",
+        "body": "Diese Daten sind verschlüsselt, Sie müssen das Passwort eingeben, um Zugang zu erhalten.",
+        "dark": "Dunkel",
+        "encryptwpasswd": "Verschlüsseln mit Passwort",
+        "exportdata": "Daten exportieren",
+        "exportmessage": "Die Notizen werden exportiert in",
+        "iedata": "Daten importieren/exportieren",
+        "importdata": "Daten importieren",
+        "importsuccess": "Daten erfolgreich importiert",
+        "invaliddata": "Ungültige Daten",
+        "light": "Hell",
+        "password": "Passwort",
+        "pathplaceholder": "Pfad",
+        "relaunch": "Die App muss neu gestartet werden, damit diese Änderung wirksam wird.",
+        "relaunchbutton": "Neustart",
+        "selectfont": "Zeichensatz auswählen",
+        "selectlanguage": "Sprache auswählen",
+        "selectpath": "Pfad auswählen",
+        "syncpath": "Sync Pfad",
+        "syncreminder": "Verstecke Synchronisationserinnerung",
+        "system": "System",
+        "title": "Einstellungen"
+    },
+    "shortcuts": {
+        "Blockcode": "Codeblock",
+        "Blockquote": "Blocksatz",
+        "Bold": "Fett",
+        "Bulletlist": "Aufzählungsliste",
+        "Createnewnote": "Neue Notiz erstellen",
+        "Editor": "Bearbeitung",
+        "General": "Allgemein",
+        "Headings": "Überschriften (1-6)",
+        "Highlight": "Hervorheben",
+        "Inlinecode": "Eingebetteter Code",
+        "Italic": "Kursiv",
+        "Link": "Link",
+        "Navigates": "Navigation",
+        "Orderedlist": "Nummerierte Liste",
+        "Previousnote": "Vorherige Notizen",
+        "Strikethrough": "Durchgestrichen",
+        "Toarchivednotes": "Zu den archivierten Notizen",
+        "Toeditednote": "Zu bearbeiteter Notiz",
+        "Togglecommandprompt": "Aktivieren der Befehlszeile",
+        "Toggledarktheme": "Thema umschalten",
+        "Toggleexport": "Export",
+        "Toggleimport": "Import",
+        "Tonotes": "Zu den Notizen",
+        "Tosettings": "Zu den Einstellungen",
+        "Underline": "Unterstrichen"
+    },
+    "tiptap": {
+        "placeholder": "Schreibe etwas..."
+    },
+    "welcome": {
+        "back": "Zurück",
+        "dark": "Dunkel",
+        "getStarted": "Los geht's",
+        "import": "Import",
+        "importText": "Bringen Sie Ihre mit Beaver Notes erstellten Notizen mühelos hinein. Wenn Sie die Desktop-App nicht verwenden oder nicht bereit sind, Ihre Notizen jetzt zu importieren? Kein Problem, Sie können sie jederzeit in den Einstellungen importieren.",
+        "importTitle": "🚚 Importieren Sie Ihre Notizen",
+        "languageText": "Wählen Sie die Sprache, die Sie bevorzugen. Sie können diese Wahl später in den Einstellungen jederzeit wieder ändern.",
+        "light": "Hell",
+        "next": "Weiter",
+        "skip": "Überspringen",
+        "start": "Beginne jetzt",
+        "startTitle": "🎊 Bereit zum Start",
+        "system": "System",
+        "themeText": "Wählen Sie das Aussehen, das am besten zu Ihrem Stil passt. Seien Sie versichert, dass Sie die Einstellungen später jederzeit überdenken und ändern können.",
+        "themeTitle": "🪄 Wählen Sie das App Thema",
+        "typographyText": "Gestalten Sie Ihr Erlebnis mit Schriftarten, die Ihren Stil widerspiegeln. Sie können Ihre Meinung jederzeit ändern und diese Auswahl später in den Einstellungen anpassen.",
+        "typographyTitle": "✍️ Anpassen der Schriftart",
+        "welcomeParagraph": "Alle unglaublichen Funktionen, die mit Beaver Notes eingeführt wurden, verpackt in der perfekten App für Notizen.",
+        "welcomeTitle": "🎉 Willkommen bei Beaver Pocket",
+        "welcomeWarning": "Beaver Pocket befindet sich derzeit in der Alpha-Phase, was zu Problemen führen kann. Es wird empfohlen, regelmäßig eine Sicherungskopie Ihrer Daten zu erstellen. Bitte beachten Sie, dass ein Datenverlust möglich ist."
+    }
 }
